# SWDR006

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE.txt  README.md  nRF52840_LR11xx_driver_v010000.diff  v261_nRF52840_sidewalk_lr11xx.diff  west.yml
AWS/: ProcessSidewalkLambda.py  README.md
lbm_v4_sidewalk/: CMakeLists.txt  Kconfig  radio_utilities.c  radio_utilities.h
lbm_v4_sidewalk/ModemHAL/: smtc_modem_hal.c
lbm_v4_sidewalk/RALBSP/: ral_lr11xx_bsp.c  ral_sx126x_bsp.c
lbm_v4_sidewalk/RadioDriverHAL/: sx126x.c  sx126x_hal_context.h
lib/: CMakeLists.txt  Kconfig  app_subGHz_config_lr11xx.c  lr1110_shell.c  radio_timing_test.c  radio_timing_test.h
lib/sid_pal_lr11xx/: CMakeLists.txt  lr11xx_hal.c  lr11xx_radio.c  lr11xx_radio_fsk.c  lr11xx_radio_lora.c
lib/sid_pal_lr11xx/include/: halo_lr11xx_radio.h  lr11xx_config.h
lib/sid_pal_sx126x/: CMakeLists.txt  sx126x_radio.c
makefiles/: relay.mk
samples/SWTL001/: CMakeLists.txt  Kconfig  prj.conf
samples/SWTL001/src/swtl001/: app.c  lr11xx_firmware_update.c
samples/lbm_sid_end_device/: CMakeLists.txt  Kconfig  build_all.sh  overlay-dut.conf  overlay-lbm.conf  overlay-nav3lbm.conf  overlay-nav3sid.conf  prj.conf  readme.md
samples/lbm_sid_end_device/boards/: lr_nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840.overlay
samples/lbm_sid_end_device/include/: example_options.h  example_options_swdm015-feb14.h  sidewalk.h
samples/lbm_sid_end_device/src/: main.c  sidewalk.c
samples/lbm_sid_end_device/src/hello/: app.c
samples/lbm_sid_end_device/src/lbm/: app_lbm_sidewalk.c  app_nav3_lbm.c  app_nav3_sidewalk.c  main_geolocation_lbm.c  main_geolocation_sidewalk.c  main_periodical_uplink.c  wifi.c
samples/sid_end_device/: CMakeLists.txt  Kconfig  build_all.sh  overlay-dut.conf  prj.conf
samples/sid_end_device/src/: sidewalk.c
samples/sid_end_device/src/cli/: smtc_shell.c
samples/sid_end_device/src/hello/: app.c
scripts/: check_for_patch.py  sid_patch.py  west-commands.yml
smtc_modem_api/: smtc_modem_utilities.h
smtc_modem_core/: CMakeLists.txt  smtc_modem.c
smtc_modem_core/geolocation_services/doc/raw/: Makefile
smtc_modem_core/lr1mac/src/relay/common/: wake_on_radio.c  wake_on_radio.h  wake_on_radio_ral.c  wake_on_radio_ral.h
smtc_modem_core/lr1mac/src/relay/relay_tx/: relay_tx_api.h
smtc_modem_core/modem_services/stream_packages/: stream.c
smtc_modem_core/modem_utilities/: modem_core.c  modem_core.h
smtc_modem_core/smtc_modem_crypto/smtc_secure_element/: smtc_secure_element.h
